<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragment.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="62dp"
                android:text="@string/select_part" />

            <Spinner
                android:id="@+id/tableSpinner"
                android:layout_width="214dp"
                android:layout_height="50dp"
                android:layout_marginBottom="1dp" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableEnd="@drawable/ic_more_vert"
                android:hint="@string/enter_word" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/wordLanguageSpinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/translateEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:drawableEnd="@drawable/ic_more_vert"
                android:hint="@string/enter_translation" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/translateLanguageSpinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
